<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <TextView
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textSize="@dimen/title1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/studentDetails"
        android:textSize="@dimen/title1"
        android:layout_marginTop="@dimen/space3"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/studentName"
        android:textSize="@dimen/title1"
        android:layout_marginTop="@dimen/space4"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/studentEmail"
        android:textSize="@dimen/title1"
        android:layout_marginTop="@dimen/space4"
        android:autoLink="email"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/studentLinkedin"
        android:textSize="@dimen/title1"
        android:layout_marginTop="@dimen/space4"
        android:autoLink="web"/>

</LinearLayout>
