<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/collapsingAppbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="@dimen/expandedTitleMarginEnd"
            app:expandedTitleMarginStart="@dimen/expandedTitleMarginStart"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <FrameLayout
                android:id="@+id/backdropFrame"
                android:layout_width="match_parent"
                android:layout_height="@dimen/backdropFrame"
                app:layout_collapseMode="parallax">

                <ImageView
                    android:id="@+id/backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gradient_foreground_fully_filled"></View>

            </FrameLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/collapsingToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:title="collapsing toolbar"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <ImageView
                    android:id="@+id/isFavorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|right"
                    android:layout_margin="@dimen/space4"
                    android:background="@drawable/gradient_foreground_fully_filled"
                    android:padding="@dimen/space4"
                    android:src="@drawable/ic_favorite" />

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/space4">

                <TextView
                    android:layout_width="@dimen/space0"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/originalTitle"
                    android:textColor="@color/app_theme"
                    android:textSize="@dimen/title2" />

                <TextView
                    android:id="@+id/originalTitle"
                    android:layout_width="@dimen/space0"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:textSize="@dimen/title2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/space4">

                <TextView
                    android:layout_width="@dimen/space0"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/releaseDate"
                    android:textColor="@color/app_theme"
                    android:textSize="@dimen/title2" />

                <TextView
                    android:id="@+id/releaseDate"
                    android:layout_width="@dimen/space0"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:textSize="@dimen/title2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/space4">

                <TextView
                    android:layout_width="@dimen/space0"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/userRating"
                    android:textColor="@color/app_theme"
                    android:textSize="@dimen/title2" />

                <TextView
                    android:id="@+id/userRating"
                    android:layout_width="@dimen/space0"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:textSize="@dimen/title2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/space4">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/synopsis"
                    android:textColor="@color/app_theme"
                    android:textSize="@dimen/title2" />

                <TextView
                    android:id="@+id/synopsis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/title2" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/space4"
                android:text="@string/movieTrailers"
                android:textColor="@color/app_theme" />

            <LinearLayout
                android:id="@+id/trailersContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/space4"
                android:text="@string/movieReviews"
                android:textColor="@color/app_theme" />

            <LinearLayout
                android:id="@+id/reviewsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>